tests/machine/x/cpp/in_operator_extended.error
line 34: ../../../tests/machine/x/cpp/in_operator_extended.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/in_operator_extended.cpp:34:31: error: ‘struct __struct1’ has no member named ‘begin’
   34 |               << (std::find(m.begin(), m.end(), std::string("a")) != m.end());
      |                               ^~~~~
../../../tests/machine/x/cpp/in_operator_extended.cpp:34:42: error: ‘struct __struct1’ has no member named ‘end’
   34 |               << (std::find(m.begin(), m.end(), std::string("a")) != m.end());
      |                                          ^~~
../../../tests/machine/x/cpp/in_operator_extended.cpp:34:72: error: ‘struct __struct1’ has no member named ‘end’
   34 |               << (std::find(m.begin(), m.end(), std::string("a")) != m.end());
      |                                                                        ^~~
../../../tests/machine/x/cpp/in_operator_extended.cpp:39:31: error: ‘struct __struct1’ has no member named ‘begin’
   39 |               << (std::find(m.begin(), m.end(), std::string("b")) != m.end());
      |                               ^~~~~
../../../tests/machine/x/cpp/in_operator_extended.cpp:39:42: error: ‘struct __struct1’ has no member named ‘end’
   39 |               << (std::find(m.begin(), m.end(), std::string("b")) != m.end());
      |                                          ^~~
../../../tests/machine/x/cpp/in_operator_extended.cpp:39:72: error: ‘struct __struct1’ has no member named ‘end’
   39 |               << (std::find(m.begin(), m.end(), std::string("b")) != m.end());
      |                                                                        ^~~

 33 |     std::cout << std::boolalpha
 34 |               << (std::find(m.begin(), m.end(), std::string("a")) != m.end());
 35 |     std::cout << std::endl;
